--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,30 @@
     margin: 0 auto;
 }
 
+#hgeader{
+  background-image: url(faint5.png);
+  background-size:contain;
+  align-self: center;
+  background-repeat: no-repeat;
+  
+  
+  height:50vh;
+  align-self: center;
+}
+
+.blogo{
+  background-image:url(logo1.png);
+  height: 100vh;
+  
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: contain;
+}
+.overlay{
+  background-color: rgba(0, 0, 0, 0.493);
+  height:100vh;
+  
+}
 .goldtext {
     color:#c3a343;
     -webkit-text-fill-color: transparent;
