--- a/style/style.css
+++ b/style/style.css
@@ -34,30 +34,14 @@
     background: -o-linear-gradient(transparent, transparent);
     -webkit-background-clip: text;
 }
-/*
-body {
-  background-image: url('logo1.png');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: cover;
-}*/
 
 
-* {box-sizing: border-box}
-/* Full-width input fields */
-  input[type=text], input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  background: #f1f1f1;
+footer a img{
+  height: 30px;
 }
 
-/* Add a background color when the inputs get focus */
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+form-control {
+  color: #474e5d;
 }
 
 /* Set a style for all buttons */
